--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ hs_err_pid*
 .gradle
 /build/
 .idea/
+local.properties
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -41,3 +42,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+!/local.properties
