--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,6 @@ hs_err_pid*
 .gradle
 /build/
 .idea/
-local.properties
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -42,4 +41,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
-!/local.properties
+/local.properties
