--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,10 @@ dependencies {
     implementation group: 'org.projectlombok', name: 'lombok', version:  '1.18.12'
     implementation group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
 
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
 
+    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.5.RELEASE'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
     testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
